--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
         "electron-squirrel-startup": "^1.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "normalize.css": "^8.0.1"
+        "normalize.css": "^8.0.1",
+        "lodash": "^4.17.15",
+        "classnames": "^2.2.6"
     }
 }
